# pepper_dialog_iai

./: README.md
dialog_system/: CMakeLists.txt  README  package.xml
dialog_system/corpus/: dialog_iai.corpus
dialog_system/launch/: dialog.launch
dialog_system/msg/: DialogResponse.msg  DialogResponses.msg
dialog_system/nodes/: dialogManager.py  dialog_manager.py  rpc_server.py  sphinx_asr.py  utility.py
knowrob_pepper_dialog/: CMakeLists.txt  package.xml
knowrob_pepper_dialog/launch/: knowrob_pepper_dialog.launch
knowrob_pepper_dialog/prolog/: init.pl  knowrob_pepper_dialog.pl
pepper_dialog_system/: CMakeLists.txt  package.xml
pepper_dialog_system/launch/: dialog.launch  pepper_dialog_only_output.launch
pepper_dialog_system/nodes/: gstreamer_sphinx.py  pepper_control.py  pepper_dialog_wrapper.py  speechRecognizer.py
